--- a/blog-manage/blog-manage-cms/pom.xml
+++ b/blog-manage/blog-manage-cms/pom.xml
@@ -3,18 +3,13 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>blog</artifactId>
+        <artifactId>blog-manage</artifactId>
         <groupId>com.zhou</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>blog-manage</artifactId>
-    <packaging>pom</packaging>
-    <modules>
-        <module>blog-manage-cms</module>
-        <module>blog-manage-upms</module>
-    </modules>
+    <artifactId>blog-manage-cms</artifactId>
 
 
 </project>
