--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
     <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
     <modules>
-       <!-- 内容管理系统-->
+       <!-- 博客内容系统-->
         <module>blog-cms</module>
        <!-- 权限管理系统（用户url访问权限、sso单点登录-->
         <module>blog-upms</module>
